--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(SuperDB C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(SuperDB main.c)
+add_executable(SuperDB main.c database.h database.c query_lang.c query_lang.h util.c util.h)
